--- a/week1.Rmd
+++ b/week1.Rmd
@@ -34,7 +34,8 @@ output:
   
 ## Homework
 
-  + Reading: Sections 11.3.3 and 11.3.4 of [textbook](info.html)
-  + Install R and RStudio
+  + Reading: Sections 11.3.3 and 11.3.4 of the [BPS textbook](info.html)
+  + Install R and RStudio before Week 2 lecture
       + If you have trouble installing R or RStudio, [this video](https://www.youtube.com/watch?v=cX532N_XLIs) can be helpful
-      + You can find some basic R information in [[Chaper 1](https://teazrq.github.io/SMLR/r-rstudio-and-r-markdown.html)] of my textbook. We will go through some of them in Week 2. 
+      + You can find some basic R information in [[Chaper 1](https://teazrq.github.io/SMLR/r-rstudio-and-r-markdown.html)] of my [SMLR](info.html) textbook.
+      + We will go over some basics during the Week 2 lecture
