--- a/week3.Rmd
+++ b/week3.Rmd
@@ -20,7 +20,7 @@ We will review
   * Philosophy of Statistical hypothesis test
   * Type I and Type II errors
   * Statistical power
-  * Interpreting p-values
+  * Interpreting $p$ values
   
 New objectives
 
@@ -29,10 +29,18 @@ New objectives
   * t-distribution
   * One sided and two sided tests
   * Contingency tables
-  * Fisher's exact test   
+  * Fisher's exact test
   * Chi-square $(\chi^2)$ distribution
   * Chi-Square test for independence
+  * Issues of multiple testings
   
 ## Lecture Note
 
-## R Examples
+  + [[Statistical Tests](notes/week3/StatTesting.html){target='_blank'}]
+  + The original `.Rmd` [`r xfun::embed_file('docs/notes/week3/StatTesting.Rmd', text = 'Source File')`] used to generate the lecture note
+  + The [Cleveland Clinic Heart Disease Dataset](notes/week3/processed_cleveland.csv){target='_blank'} in `.csv` format. This data is also available on [Kaggle](https://www.kaggle.com/aavigan/cleveland-clinic-heart-disease-dataset)). 
+
+## Homework
+
+  + Reading: Finish Sections 5.5.4 from the [BPS textbook](info.html)
+  + Finish the practice questions in the lecture note
