--- a/week4.Rmd
+++ b/week4.Rmd
@@ -44,8 +44,8 @@ There are also several questions about more advanced topics in linear regression
 
 ## Reading Material
 
-  * [Correlation and Independence](notes/week4/TBL-Correlation.html) 
-  * [Simple Linear Regression](notes/week4/TBL-SLR.html) 
+  * [[Correlation and Independence](notes/week4/TBL-Correlation.html)]; Original `.Rmd` [`r xfun::embed_file('docs/notes/week4/TBL-Correlation.Rmd', text = 'Source File')`]
+  * [[Simple Linear Regression](notes/week4/TBL-SLR.html)]; Original `.Rmd` [`r xfun::embed_file('docs/notes/week4/TBL-SLR.Rmd', text = 'Source File')`]
   * Multiple Linear Regression and Confounding Variables
 
 ## Discussion Session
